--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-bootstrap": "^2.10.8",
     "react-dom": "^18.3.1",
     "styled-components": "^6.1.14",
-    "swiper": "^11.2.1"
+    "swiper": "^11.2.1",
+    "swiper-react": "^1.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
