--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "@types/styled-components": "^5.1.34",
     "bootstrap": "^5.3.3",
     "jquery": "^3.7.1",
+    "phosphor-react": "^1.4.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.8",
     "react-dom": "^18.3.1",
     "styled-components": "^6.1.14",
-    "swiper": "^11.2.1",
-    "swiper-react": "^1.0.0"
+    "swiper": "^11.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
