--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.3.3",
     "jquery": "^3.7.1",
     "phosphor-react": "^1.4.1",
+    "radix-ui": "^1.1.2",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.8",
     "react-dom": "^18.3.1",
